--- a/landing/assets/css/style.css
+++ b/landing/assets/css/style.css
@@ -459,7 +459,7 @@ html {
 }
 
 .shadow-lg {
-    box-shadow: 0 10px 30px rgba(0, 0, 0, 0.1) !important;
+    box-shadow: none    ; 
 }
 
 .rounded-lg {
